--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -125,36 +125,27 @@ Chart.defaults.global.responsive = true;
         <div class="row">
           <div class="col-lg-2 code_buttons">
             <i class="fa fa-remove rmv"></i>
-            <span class="c_text">Facebook</span>
+          <center>
+
+              <div class="c_text">Facebook <br/>
+
+              </div>
+              <button class="btn btn-success btn-xs button">Discard</button><button class="btn btn-danger btn-xs button">Keep</button>
+
           </div>
-          <div class="col-lg-2 code_buttons">
-            <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-            <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-            <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-          <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-          <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-          <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-        <i class="fa fa-remove rmv"></i>
-          </div>
-          <div class="col-lg-2 code_buttons">
-            <i class="fa fa-remove rmv"></i>
-          </div>
+
 
           <div class="col-lg-2 code_buttons">
             <i class="fa fa-remove rmv"></i>
+          <center>
+
+              <div class="c_text">Facebook <br/>
+
+              </div>
+              <button class="btn btn-success btn-xs button">Discard</button><button class="btn btn-danger btn-xs button">Keep</button>
+
           </div>
+
 
 
 
